<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_description_black_24px"
            android:title="@string/news" />
        <item
            android:id="@+id/records"
            android:icon="@drawable/ic_gesture_black_24px"
            android:title="@string/records" />
        <item
            android:id="@+id/products"
            android:icon="@drawable/ic_gesture_black_24px"
            android:title="@string/products" />
        <item
            android:id="@+id/messages"
            android:icon="@drawable/ic_filter_list_black_24px"
            android:title="@string/messages" />

        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/favorites">
            <menu>
                <item
                    android:id="@+id/barbershop"
                    android:icon="@drawable/ic_gesture_black_24px"
                    android:title="@string/barbershop" />
                <item
                    android:id="@+id/clinic"
                    android:icon="@drawable/ic_gesture_black_24px"
                    android:title="@string/clinic" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_gesture_black_24px"
            android:title="@string/sign_out" />
    </group>

</menu>