<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#448AFF"
    tools:context="com.mixailsednev.storeproject.view.welcome.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#448AFF"
        android:orientation="vertical">

        <TextView
            style="@style/WelcomeScreenHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#448AFF"
            android:text="@string/welcome_screen_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/google_sign_in"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/google_sign_in" />

        <Button
            android:id="@+id/explore_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/explore_button_text" />
    </LinearLayout>
</FrameLayout>