<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_content_margin"
    tools:context=".view.product.ProductEditFragment"
>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp">

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/cost"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/name"
      android:layout_marginTop="20dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCost"
        android:ems="10"
        android:hint="@string/cost"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/cost"
      android:layout_marginTop="20dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDescription"
        android:ems="10"
        android:hint="@string/description"/>
  </android.support.design.widget.TextInputLayout>

</RelativeLayout>
